Added makefile Modified directory structure